--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
   <header class="hero">
     <h1>Bakhta Elamar</h1>
     <h2>Software & Data Engineer</h2>
-    <p><a href="mailto:bakhtaelamarcontact@gmail.com">bakhtaelamarcontact@gmail.com</a> | 
-       <a href="https://linkedin.com/in/bakhtaelamar" target="_blank">LinkedIn</a> | 
-       <a href="https://github.com/belamar1" target="_blank">GitHub</a></p>
+    <p class="contact-links">
+      <a href="mailto:bakhtaelamarcontact@gmail.com">bakhtaelamarcontact@gmail.com</a> |
+      <a href="https://www.linkedin.com/in/bakhtaelamar" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/belamar1" target="_blank">GitHub</a>
+    </p>
     <p class="tagline">"Building secure, scalable applications and robust data pipelines."</p>
   </header>
 
+  <!-- Subtle Wave Background -->
+  <svg class="hero-wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 150">
+    <path fill="#e0f7f4" fill-opacity="1" d="M0,96L40,101.3C80,107,160,117,240,122.7C320,128,400,128,480,112C560,96,640,64,720,48C800,32,880,32,960,58.7C1040,85,1120,139,1200,149.3C1280,160,1360,128,1400,112L1440,96L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path>
+  </svg>
+
   <!-- Professional Summary -->
-  <section class="summary">
+  <section>
     <h3>Professional Summary</h3>
     <p>A versatile Software and Data Engineer with a passion for building secure, scalable applications and robust data pipelines. Experienced in the full software development lifecycle, from backend architecture in Python and Node.js to data modelling and visualization with PostgreSQL and Grafana. Proven ability to lead projects from concept to deployment, combining hands-on coding with a product-focused mindset.</p>
   </section>
@@ -26,85 +33,51 @@
   <!-- Technical Skills -->
   <section class="skills">
     <h3>Technical Skills</h3>
-    <div class="skills-grid">
-      <div><strong>Languages:</strong> Python, SQL, JavaScript, Rust, C++</div>
-      <div><strong>Data:</strong> PostgreSQL, Grafana, ETL, Data Warehousing, MongoDB, AWS</div>
-      <div><strong>Backend/DevOps:</strong> Node.js, Flask, REST APIs, Docker, Git, CI/CD</div>
-      <div><strong>Frontend:</strong> React, HTML5, CSS3</div>
-      <div><strong>Security:</strong> AI Security, TDD, Vulnerability Analysis, Open-Source Security</div>
-    </div>
+    <ul>
+      <li>Languages: Python, SQL, JavaScript, Rust, C++</li>
+      <li>Data: PostgreSQL, Grafana, ETL, Data Warehousing, MongoDB, AWS</li>
+      <li>Backend/DevOps: Node.js, Flask, REST APIs, Docker, Git, CI/CD</li>
+      <li>Frontend: React, HTML5, CSS3</li>
+      <li>Security: AI Security, TDD, Vulnerability Analysis, Open-Source Security</li>
+    </ul>
   </section>
 
   <!-- Experience Timeline -->
-  <section class="experience">
+  <section class="timeline">
     <h3>Experience</h3>
-    <div class="timeline">
-      <div class="timeline-item">
-        <h4>Founder & Lead Developer</h4>
-        <p>Secure Things Innova (Mar 2024 - Present)</p>
-      </div>
-      <div class="timeline-item">
-        <h4>Data Engineering Trainee</h4>
-        <p>Generation UK (Feb 2025 - Apr 2025)</p>
-      </div>
-      <div class="timeline-item">
-        <h4>Student Trainee</h4>
-        <p>TecLancaster (Jan 2024 - Mar 2024)</p>
-      </div>
-      <div class="timeline-item">
-        <h4>Security Researcher</h4>
-        <p>Self-employed (Mar 2023 - Dec 2023)</p>
-      </div>
-      <div class="timeline-item">
-        <h4>Software Developer</h4>
-        <p>Makers (Oct 2022 - Mar 2023)</p>
-      </div>
+    <div class="timeline-item">
+      <h4>Founder & Lead Developer</h4>
+      <p>Secure Things Innova (Mar 2024 - Present)</p>
+    </div>
+    <div class="timeline-item">
+      <h4>Data Engineering Trainee</h4>
+      <p>Generation UK (Feb 2025 - Apr 2025)</p>
+    </div>
+    <div class="timeline-item">
+      <h4>Student Trainee</h4>
+      <p>TecLancaster (Jan 2024 - Mar 2024)</p>
+    </div>
+    <div class="timeline-item">
+      <h4>Security Researcher</h4>
+      <p>Self-employed (Mar 2023 - Dec 2023)</p>
+    </div>
+    <div class="timeline-item">
+      <h4>Software Developer</h4>
+      <p>Makers (Oct 2022 - Mar 2023)</p>
     </div>
   </section>
 
-  <!-- Featured Projects -->
-  <section class="projects">
-    <h3>Featured Projects</h3>
-    <div class="project">
-      <h4>EcoTech Explorers</h4>
-      <p>STEM workshop program for kids — Python, Arduino, Circuit Design</p>
-      <p>Developed interactive STEM workshops that teach children about environmental technology through hands-on projects combining programming and electronics.</p>
-    </div>
-    <div class="project">
-      <h4>SecureData Pipeline</h4>
-      <p>End-to-end encrypted data processing system — Python, PostgreSQL, AWS</p>
-      <p>Built a secure ETL pipeline ensuring data integrity and confidentiality throughout the entire processing workflow.</p>
-    </div>
-    <div class="project">
-      <h4>Open Security Scanner</h4>
-      <p>Vulnerability assessment tool — Rust, Docker, CI/CD</p>
-      <p>Developed an open-source tool to scan codebases for security vulnerabilities and propose fixes.</p>
-    </div>
-    <div class="project">
-      <h4>DataViz Dashboard</h4>
-      <p>Interactive data visualization platform — React, Node.js, Grafana</p>
-      <p>Created a customizable dashboard that transforms complex datasets into clear insights.</p>
-    </div>
-  </section>
-
-  <!-- Education -->
-  <section class="education">
-    <h3>Education</h3>
-    <p><strong>BSc (Hons) Computer Science</strong><br/>The Open University (Sep 2022 - Present)</p>
-    <p><strong>Master's in Business Management & Economics</strong><br/>University of Nantes (2001-2003)</p>
-  </section>
-
-  <!-- Contact Form -->
-  <section class="contact">
+  <!-- Contact -->
+  <section>
     <h3>Get In Touch</h3>
     <form>
-      <input type="text" name="name" placeholder="Name" required /><br/>
-      <input type="email" name="email" placeholder="Email" required /><br/>
-      <input type="text" name="subject" placeholder="Subject" /><br/>
-      <textarea name="message" placeholder="Message" required></textarea><br/>
+      <input type="text" placeholder="Name" required><br>
+      <input type="email" placeholder="Email" required><br>
+      <input type="text" placeholder="Subject"><br>
+      <textarea placeholder="Message" required></textarea><br>
       <button type="submit">Send Message</button>
     </form>
-    <p class="demo-note">This is a demo contact form. In a real implementation, form submissions would be processed securely.</p>
+    <p class="note">This is a demo contact form. In a real implementation, submissions would be processed securely.</p>
   </section>
 
   <footer>
