--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Progress Bar -->
@@ -17,14 +18,12 @@
   <!-- Hero Section -->
   <section id="hero" class="section">
     <div class="animated-bg" id="animatedBg"></div>
-    <div class="hero-content">
+    <div class="hero-content card">
       <h1>Bakhta Elamar</h1>
       <h2>Software & Data Engineer</h2>
       <p class="links">
-        <a href="mailto:bakhtaelamarcontact@gmail.com"><i class="fas fa-envelope"></i> bakhtaelamarcontact@gmail.com</a>
-        |
-        <a href="https://linkedin.com/in/bakhtaelamar" target="_blank"><i class="fab fa-linkedin"></i> linkedin.com/in/bakhtaelamar</a>
-        |
+        <a href="mailto:bakhtaelamarcontact@gmail.com"><i class="fas fa-envelope"></i> bakhtaelamarcontact@gmail.com</a> |
+        <a href="https://linkedin.com/in/bakhtaelamar" target="_blank"><i class="fab fa-linkedin"></i> linkedin.com/in/bakhtaelamar</a> |
         <a href="https://github.com/belamar1" target="_blank"><i class="fab fa-github"></i> github.com/belamar1</a>
       </p>
       <p class="tagline">"Building secure, scalable applications and robust data pipelines."</p>
@@ -34,10 +33,8 @@
   <!-- Summary -->
   <section class="section">
     <h2>Professional Summary</h2>
-    <div class="card">
-      <p>
-        A versatile Software and Data Engineer with a passion for building secure, scalable applications and robust data pipelines. Experienced in the full software development lifecycle, from backend architecture in Python and Node.js to data modelling and visualization with PostgreSQL and Grafana. Proven ability to lead projects from concept to deployment, combining hands-on coding with a product-focused mindset.
-      </p>
+    <div class="card bordered">
+      <p>A versatile Software and Data Engineer with a passion for building secure, scalable applications and robust data pipelines. Experienced in the full software development lifecycle, from backend architecture in Python and Node.js to data modelling and visualization with PostgreSQL and Grafana. Proven ability to lead projects from concept to deployment, combining hands-on coding with a product-focused mindset.</p>
     </div>
   </section>
 
@@ -65,11 +62,11 @@
         <span class="skill-tag">AWS</span>
       </div>
     </div>
-    <!-- Add Backend/DevOps, Frontend, Security similarly -->
+    <!-- Add Backend/DevOps, Frontend, Security if you want more -->
     <div id="skill-connections"></div>
   </section>
 
-  <!-- Experience Timeline -->
+  <!-- Timeline -->
   <section class="section">
     <h2>Experience</h2>
     <div class="timeline" id="timeline-container">
@@ -78,11 +75,9 @@
         <div class="timeline-dot"></div>
         <h4>Founder & Lead Developer</h4>
         <p>Secure Things Innova (Mar 2024 - Present)</p>
-        <div class="timeline-content">
-          Leading development of secure IoT solutions and pipelines.
-        </div>
+        <div class="timeline-content">Leading secure IoT solutions and robust pipelines.</div>
       </div>
-      <!-- Add more timeline items -->
+      <!-- Add other timeline items here -->
     </div>
   </section>
 
@@ -94,8 +89,9 @@
         <h4>EcoTech Explorers</h4>
         <p>STEM workshop program for kids</p>
         <p class="tags">Python, Arduino, Circuit Design</p>
+        <p>Interactive STEM curriculum for kids.</p>
       </div>
-      <!-- Add more projects -->
+      <!-- Add other project cards here -->
     </div>
   </section>
 
