--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bakhta Elamar | Software & Data Engineer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Progress Bar -->
   <div class="progress-container">
     <div class="progress-bar" id="progressBar"></div>
   </div>
@@ -18,10 +17,10 @@
   <!-- Hero Section -->
   <section id="hero" class="section">
     <div class="animated-bg" id="animatedBg"></div>
-    <div class="hero-content card">
+    <div class="hero-card">
       <h1>Bakhta Elamar</h1>
       <h2>Software & Data Engineer</h2>
-      <p class="links">
+      <p class="contact">
         <a href="mailto:bakhtaelamarcontact@gmail.com"><i class="fas fa-envelope"></i> bakhtaelamarcontact@gmail.com</a> |
         <a href="https://linkedin.com/in/bakhtaelamar" target="_blank"><i class="fab fa-linkedin"></i> linkedin.com/in/bakhtaelamar</a> |
         <a href="https://github.com/belamar1" target="_blank"><i class="fab fa-github"></i> github.com/belamar1</a>
@@ -33,36 +32,25 @@
   <!-- Summary -->
   <section class="section">
     <h2>Professional Summary</h2>
-    <div class="card bordered">
-      <p>A versatile Software and Data Engineer with a passion for building secure, scalable applications and robust data pipelines. Experienced in the full software development lifecycle, from backend architecture in Python and Node.js to data modelling and visualization with PostgreSQL and Grafana. Proven ability to lead projects from concept to deployment, combining hands-on coding with a product-focused mindset.</p>
+    <div class="card left-border">
+      <p>A versatile Software and Data Engineer with a passion for building secure, scalable applications and robust data pipelines. Experienced in the full software development lifecycle, from backend architecture in Python and Node.js to data modelling and visualization with PostgreSQL and Grafana.</p>
     </div>
   </section>
 
   <!-- Skills -->
   <section class="section">
     <h2>Technical Skills</h2>
-    <div class="skills-group">
+    <div class="skills">
       <h3>Languages</h3>
-      <div class="skills">
+      <div class="skills-tags">
         <span class="skill-tag" data-category="languages" data-related="backend,data">Python</span>
-        <span class="skill-tag">SQL</span>
-        <span class="skill-tag">JavaScript</span>
-        <span class="skill-tag">Rust</span>
-        <span class="skill-tag">C++</span>
+        <span class="skill-tag" data-category="languages">SQL</span>
+        <span class="skill-tag" data-category="languages" data-related="frontend,backend">JavaScript</span>
+        <span class="skill-tag" data-category="languages" data-related="security">Rust</span>
+        <span class="skill-tag" data-category="languages" data-related="security">C++</span>
       </div>
+      <!-- Add Data, Backend/DevOps, Frontend, Security -->
     </div>
-    <div class="skills-group">
-      <h3>Data</h3>
-      <div class="skills">
-        <span class="skill-tag">PostgreSQL</span>
-        <span class="skill-tag">Grafana</span>
-        <span class="skill-tag">ETL</span>
-        <span class="skill-tag">Data Warehousing</span>
-        <span class="skill-tag">MongoDB</span>
-        <span class="skill-tag">AWS</span>
-      </div>
-    </div>
-    <!-- Add Backend/DevOps, Frontend, Security if you want more -->
     <div id="skill-connections"></div>
   </section>
 
@@ -75,9 +63,9 @@
         <div class="timeline-dot"></div>
         <h4>Founder & Lead Developer</h4>
         <p>Secure Things Innova (Mar 2024 - Present)</p>
-        <div class="timeline-content">Leading secure IoT solutions and robust pipelines.</div>
+        <div class="timeline-content">Leading secure IoT solutions and scalable backends.</div>
       </div>
-      <!-- Add other timeline items here -->
+      <!-- Add more items -->
     </div>
   </section>
 
@@ -89,9 +77,9 @@
         <h4>EcoTech Explorers</h4>
         <p>STEM workshop program for kids</p>
         <p class="tags">Python, Arduino, Circuit Design</p>
-        <p>Interactive STEM curriculum for kids.</p>
+        <p>Hands-on projects teaching kids about environmental tech.</p>
       </div>
-      <!-- Add other project cards here -->
+      <!-- More projects -->
     </div>
   </section>
 
@@ -106,19 +94,18 @@
 
   <!-- Contact -->
   <section class="section">
-    <h2>Get In Touch</h2>
+    <h2>Contact</h2>
     <form id="contact-form">
       <input type="text" placeholder="Name" required>
       <input type="email" placeholder="Email" required>
-      <input type="text" placeholder="Subject">
       <textarea placeholder="Message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
-    <p class="note">This is a demo contact form.</p>
+    <p class="note">This is a demo form.</p>
   </section>
 
   <footer>
-    <p>© 2024 Bakhta Elamar. All rights reserved.</p>
+    <p>&copy; 2024 Bakhta Elamar. All rights reserved.</p>
   </footer>
 </body>
 </html>
