--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bakhta Elamar | Software & Data Engineer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
 <body>
+  <!-- Scroll Progress Bar -->
   <div class="progress-container">
     <div class="progress-bar" id="progressBar"></div>
   </div>
 
   <!-- Hero Section -->
-  <section id="hero" class="section">
-    <div class="animated-bg" id="animatedBg"></div>
+  <section id="hero">
+    <div id="animatedBg"></div>
     <div class="hero-card">
       <h1>Bakhta Elamar</h1>
       <h2>Software & Data Engineer</h2>
@@ -29,47 +30,47 @@
     </div>
   </section>
 
-  <!-- Summary -->
+  <!-- Professional Summary -->
   <section class="section">
     <h2>Professional Summary</h2>
     <div class="card left-border">
-      <p>A versatile Software and Data Engineer with a passion for building secure, scalable applications and robust data pipelines. Experienced in the full software development lifecycle, from backend architecture in Python and Node.js to data modelling and visualization with PostgreSQL and Grafana.</p>
+      <p>A versatile Software and Data Engineer with a passion for building secure, scalable applications and robust data pipelines. Experienced in the full software development lifecycle, from backend architecture in Python and Node.js to data modelling and visualization with PostgreSQL and Grafana. Proven ability to lead projects from concept to deployment, combining hands-on coding with a product-focused mindset.</p>
     </div>
   </section>
 
-  <!-- Skills -->
+  <!-- Technical Skills -->
   <section class="section">
     <h2>Technical Skills</h2>
-    <div class="skills">
+    <div class="skills-group">
       <h3>Languages</h3>
       <div class="skills-tags">
         <span class="skill-tag" data-category="languages" data-related="backend,data">Python</span>
-        <span class="skill-tag" data-category="languages">SQL</span>
+        <span class="skill-tag" data-category="languages" data-related="data">SQL</span>
         <span class="skill-tag" data-category="languages" data-related="frontend,backend">JavaScript</span>
         <span class="skill-tag" data-category="languages" data-related="security">Rust</span>
         <span class="skill-tag" data-category="languages" data-related="security">C++</span>
       </div>
-      <!-- Add Data, Backend/DevOps, Frontend, Security -->
+      <!-- Add Data, Backend, Frontend, Security with same structure -->
     </div>
     <div id="skill-connections"></div>
   </section>
 
-  <!-- Timeline -->
+  <!-- Experience -->
   <section class="section">
-    <h2>Experience</h2>
+    <h2>Professional Experience</h2>
     <div class="timeline" id="timeline-container">
       <div class="timeline-line" id="timeline-line"></div>
       <div class="timeline-item">
         <div class="timeline-dot"></div>
         <h4>Founder & Lead Developer</h4>
         <p>Secure Things Innova (Mar 2024 - Present)</p>
-        <div class="timeline-content">Leading secure IoT solutions and scalable backends.</div>
+        <div class="timeline-content">Leading secure IoT solutions and data pipelines.</div>
       </div>
-      <!-- Add more items -->
+      <!-- Add other roles -->
     </div>
   </section>
 
-  <!-- Projects -->
+  <!-- Featured Projects -->
   <section class="section">
     <h2>Featured Projects</h2>
     <div class="projects">
@@ -77,9 +78,9 @@
         <h4>EcoTech Explorers</h4>
         <p>STEM workshop program for kids</p>
         <p class="tags">Python, Arduino, Circuit Design</p>
-        <p>Hands-on projects teaching kids about environmental tech.</p>
+        <p>Developed interactive STEM workshops teaching children environmental technology through hands-on projects.</p>
       </div>
-      <!-- More projects -->
+      <!-- Add other projects -->
     </div>
   </section>
 
@@ -90,6 +91,10 @@
       <h4>BSc (Hons) Computer Science</h4>
       <p>The Open University (Sep 2022 - Present)</p>
     </div>
+    <div class="card">
+      <h4>Master's in Business Management & Economics</h4>
+      <p>University of Nantes (2001-2003)</p>
+    </div>
   </section>
 
   <!-- Contact -->
@@ -98,10 +103,11 @@
     <form id="contact-form">
       <input type="text" placeholder="Name" required>
       <input type="email" placeholder="Email" required>
-      <textarea placeholder="Message" required></textarea>
+      <input type="text" placeholder="Subject" required>
+      <textarea placeholder="Message" rows="5" required></textarea>
       <button type="submit">Send Message</button>
     </form>
-    <p class="note">This is a demo form.</p>
+    <p class="note">This is a demo form. Your submission will not be sent.</p>
   </section>
 
   <footer>
