--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bakhta Elamar | Software & Data Engineer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <!-- Scroll Progress Bar -->
   <div class="progress-container">
     <div class="progress-bar" id="progressBar"></div>
   </div>
 
-  <!-- Hero Section -->
   <section id="hero">
     <div id="animatedBg"></div>
     <div class="hero-card">
@@ -23,95 +20,92 @@
       <h2>Software & Data Engineer</h2>
       <p class="contact">
         <a href="mailto:bakhtaelamarcontact@gmail.com"><i class="fas fa-envelope"></i> bakhtaelamarcontact@gmail.com</a> |
-        <a href="https://linkedin.com/in/bakhtaelamar" target="_blank"><i class="fab fa-linkedin"></i> linkedin.com/in/bakhtaelamar</a> |
-        <a href="https://github.com/belamar1" target="_blank"><i class="fab fa-github"></i> github.com/belamar1</a>
+        <a href="https://linkedin.com/in/bakhtaelamar"><i class="fab fa-linkedin"></i> linkedin.com/in/bakhtaelamar</a> |
+        <a href="https://github.com/belamar1"><i class="fab fa-github"></i> github.com/belamar1</a>
       </p>
       <p class="tagline">"Building secure, scalable applications and robust data pipelines."</p>
     </div>
   </section>
 
-  <!-- Professional Summary -->
-  <section class="section">
-    <h2>Professional Summary</h2>
-    <div class="card left-border">
-      <p>A versatile Software and Data Engineer with a passion for building secure, scalable applications and robust data pipelines. Experienced in the full software development lifecycle, from backend architecture in Python and Node.js to data modelling and visualization with PostgreSQL and Grafana. Proven ability to lead projects from concept to deployment, combining hands-on coding with a product-focused mindset.</p>
-    </div>
-  </section>
-
-  <!-- Technical Skills -->
   <section class="section">
     <h2>Technical Skills</h2>
     <div class="skills-group">
       <h3>Languages</h3>
       <div class="skills-tags">
-        <span class="skill-tag" data-category="languages" data-related="backend,data">Python</span>
-        <span class="skill-tag" data-category="languages" data-related="data">SQL</span>
-        <span class="skill-tag" data-category="languages" data-related="frontend,backend">JavaScript</span>
-        <span class="skill-tag" data-category="languages" data-related="security">Rust</span>
-        <span class="skill-tag" data-category="languages" data-related="security">C++</span>
+        <span>Python</span><span>SQL</span><span>JavaScript</span><span>Rust</span><span>C++</span>
       </div>
-      <!-- Add Data, Backend, Frontend, Security with same structure -->
+      <h3>Data</h3>
+      <div class="skills-tags">
+        <span>PostgreSQL</span><span>Grafana</span><span>ETL</span><span>Data Warehousing</span><span>MongoDB</span><span>AWS</span>
+      </div>
+      <h3>Backend/DevOps</h3>
+      <div class="skills-tags">
+        <span>Node.js</span><span>Flask</span><span>REST APIs</span><span>Docker</span><span>Git</span><span>CI/CD</span>
+      </div>
+      <h3>Frontend</h3>
+      <div class="skills-tags">
+        <span>React</span><span>HTML5</span><span>CSS3</span>
+      </div>
+      <h3>Security</h3>
+      <div class="skills-tags">
+        <span>AI Security</span><span>TDD</span><span>Vulnerability Analysis</span><span>Open-Source Security</span>
+      </div>
     </div>
-    <div id="skill-connections"></div>
   </section>
 
-  <!-- Experience -->
   <section class="section">
-    <h2>Professional Experience</h2>
-    <div class="timeline" id="timeline-container">
-      <div class="timeline-line" id="timeline-line"></div>
-      <div class="timeline-item">
-        <div class="timeline-dot"></div>
-        <h4>Founder & Lead Developer</h4>
-        <p>Secure Things Innova (Mar 2024 - Present)</p>
-        <div class="timeline-content">Leading secure IoT solutions and data pipelines.</div>
-      </div>
-      <!-- Add other roles -->
+    <h2>Experience</h2>
+    <div class="timeline">
+      <div><strong>Founder & Lead Developer</strong><br/>Secure Things Innova (Mar 2024 - Present)</div>
+      <div><strong>Data Engineering Trainee</strong><br/>Generation UK (Feb 2025 - Apr 2025)</div>
+      <div><strong>Student Trainee</strong><br/>TecLancaster (Jan 2024 - Mar 2024)</div>
+      <div><strong>Security Researcher</strong><br/>Self-employed (Mar 2023 - Dec 2023)</div>
+      <div><strong>Software Developer</strong><br/>Makers (Oct 2022 - Mar 2023)</div>
     </div>
   </section>
 
-  <!-- Featured Projects -->
   <section class="section">
     <h2>Featured Projects</h2>
     <div class="projects">
       <div class="project-card">
         <h4>EcoTech Explorers</h4>
         <p>STEM workshop program for kids</p>
-        <p class="tags">Python, Arduino, Circuit Design</p>
-        <p>Developed interactive STEM workshops teaching children environmental technology through hands-on projects.</p>
+        <p>Python, Arduino, Circuit Design</p>
+        <p>Developed interactive STEM workshops that teach children about environmental technology.</p>
       </div>
-      <!-- Add other projects -->
+      <div class="project-card">
+        <h4>SecureData Pipeline</h4>
+        <p>End-to-end encrypted data processing system</p>
+        <p>Python, PostgreSQL, AWS</p>
+        <p>Built a secure ETL pipeline ensuring data integrity and confidentiality.</p>
+      </div>
+      <div class="project-card">
+        <h4>Open Security Scanner</h4>
+        <p>Vulnerability assessment tool</p>
+        <p>Rust, Docker, CI/CD</p>
+        <p>Developed an open-source tool for scanning codebases for vulnerabilities.</p>
+      </div>
+      <div class="project-card">
+        <h4>DataViz Dashboard</h4>
+        <p>Interactive data visualization platform</p>
+        <p>React, Node.js, Grafana</p>
+        <p>Created dashboards to transform complex datasets into intuitive visualizations.</p>
+      </div>
     </div>
   </section>
 
-  <!-- Education -->
   <section class="section">
     <h2>Education</h2>
-    <div class="card">
-      <h4>BSc (Hons) Computer Science</h4>
-      <p>The Open University (Sep 2022 - Present)</p>
+    <div class="education">
+      <div>BSc (Hons) Computer Science — The Open University (Sep 2022 - Present)</div>
+      <div>Master's in Business Management & Economics — University of Nantes (2001-2003)</div>
     </div>
-    <div class="card">
-      <h4>Master's in Business Management & Economics</h4>
-      <p>University of Nantes (2001-2003)</p>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section class="section">
-    <h2>Contact</h2>
-    <form id="contact-form">
-      <input type="text" placeholder="Name" required>
-      <input type="email" placeholder="Email" required>
-      <input type="text" placeholder="Subject" required>
-      <textarea placeholder="Message" rows="5" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-    <p class="note">This is a demo form. Your submission will not be sent.</p>
   </section>
 
   <footer>
-    <p>&copy; 2024 Bakhta Elamar. All rights reserved.</p>
+    &copy; 2024 Bakhta Elamar. All rights reserved.
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
