--- a/index.html
+++ b/index.html
@@ -2,28 +2,80 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bakhta Elamar | Software & Data Engineer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- Progress Bar -->
+  <!-- Scroll Progress Bar -->
   <div class="progress-container">
     <div class="progress-bar" id="progressBar"></div>
   </div>
 
-  <!-- Hero Section -->
+  <!-- Hero -->
   <section id="hero">
     <div id="animatedBg"></div>
     <div class="hero-card">
       <h1>Bakhta Elamar</h1>
       <h2>Software & Data Engineer</h2>
-      <div class="contact-links">
-        <a href="mailto:bakhtaelamarcontact@gmail.com"><i class="fas fa-envelope"></i> bakhtaelamarcontact@gmail.com</a>
-        <a href="https://linkedin.com/in/bakhtaelamar"><i class="fab fa-linkedin"></i> linkedin.com/in/bakhtaelamar</a>
-        <a href="https://github.com/belamar1"><i class="fab fa-github"></i> github.com/belamar1</a>
-      </div>
-      <p class="tagline">"
+      <p>
+        <a href="mailto:bakhtaelamarcontact@gmail.com">Email</a> |
+        <a href="https://linkedin.com/in/bakhtaelamar" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/belamar1" target="_blank">GitHub</a>
+      </p>
+      <p class="tagline">"Building secure, scalable applications and robust data pipelines."</p>
+    </div>
+  </section>
+
+  <!-- Summary -->
+  <section class="section">
+    <h2>Professional Summary</h2>
+    <div class="summary-box">
+      A versatile Software and Data Engineer with a passion for building secure, scalable applications and robust data pipelines...
+    </div>
+  </section>
+
+  <!-- Skills -->
+  <section class="section">
+    <h2>Technical Skills</h2>
+    <div class="skills-tags">
+      <span class="skill-tag" data-related="backend,data">Python</span>
+      <span class="skill-tag" data-related="data">SQL</span>
+      <span class="skill-tag" data-related="frontend,backend">JavaScript</span>
+      <!-- Add the rest -->
+    </div>
+    <div id="skill-connections"></div>
+  </section>
+
+  <!-- Experience -->
+  <section class="section">
+    <h2>Experience</h2>
+    <div class="timeline">
+      <div class="timeline-item">Founder & Lead Developer | Secure Things Innova</div>
+      <!-- Add the rest -->
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section class="section">
+    <h2>Featured Projects</h2>
+    <div class="projects">
+      <div class="project-card">EcoTech Explorers...</div>
+      <!-- Add the rest -->
+    </div>
+  </section>
+
+  <!-- Education -->
+  <section class="section">
+    <h2>Education</h2>
+    <div>BSc Computer Science | Open University</div>
+    <div>Master's Business Mgmt | University of Nantes</div>
+  </section>
+
+  <!-- Footer -->
+  <footer>&copy; 2024 Bakhta Elamar. All rights reserved.</footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
