--- a/index.html
+++ b/index.html
@@ -72,9 +72,21 @@
     <div>BSc Computer Science | Open University</div>
     <div>Master's Business Mgmt | University of Nantes</div>
   </section>
+  <!-- Contact -->
+  <section>
+    <h3>Get In Touch</h3>
+    <form>
+      <input type="text" placeholder="Name" required><br>
+      <input type="email" placeholder="Email" required><br>
+      <input type="text" placeholder="Subject"><br>
+      <textarea placeholder="Message" required></textarea><br>
+      <button type="submit">Send Message</button>
+    </form>
+    <p class="note">This is a demo contact form. In a real implementation, submissions would be processed securely.</p>
+  </section>
 
   <!-- Footer -->
-  <footer>&copy; 2024 Bakhta Elamar. All rights reserved.</footer>
+  <footer>&copy; 2025 Bakhta Elamar. All rights reserved.</footer>
 
   <script src="script.js"></script>
 </body>
